# legistar-mcp

./: .gitignore  README.md  pyproject.toml
src/legistar_mcp/: _db_utils.py  agencies.yaml  agency.py  cli.py  db.py  server.py
src/legistar_mcp/index/: build.py  bulk.py  schema.sql
src/legistar_mcp/tools/: _snippet.py  bills.py  committees.py  events.py  people.py  relationships.py  vocab.py
tests/: conftest.py  test_agency.py  test_db.py  test_db_utils.py  test_index_bills.py  test_index_bulk.py  test_index_events.py  test_index_people.py  test_integration_moo.py  test_schema.py  test_server.py  test_smoke.py  test_tool_aggregate_bills.py  test_tool_aggregate_events.py  test_tool_committees.py  test_tool_events.py  test_tool_get_bill.py  test_tool_get_event.py  test_tool_people.py  test_tool_relationships.py  test_tool_search_bills.py  test_tool_vocab.py  test_tool_voting.py
tests/fixtures/events/: 2024_city-council.json
