[project]
name = "legistar-mcp"
version = "0.1.0"
description = "MCP server for the NYC Legistar legislation archive"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.scripts]
legistar-mcp = "legistar_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "freezegun>=1.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: tests that run against the real NYC Legistar archive (use -m slow)",
]
